--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="view/assets/" kind="src" path="1iteracao-workspace/1iteracao/src"/>
+	<classpathentry kind="src" path="1iteracao-workspace/1iteracao/src"/>
 	<classpathentry kind="src" path="1iteracao-workspace/1iteracao/src_tests"/>
+	<classpathentry kind="src" path="assets"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
