Mudei o nome do projeto igual o Ivan pediu

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>INF1636-POO-2021.2</name>
+	<name>1720511-1811508-INF1636-POO-2021-2</name>
 	<comment></comment>
 	<projects>
 	</projects>
